--- a/03 PWA/smartSammlerPWA/package.json
+++ b/03 PWA/smartSammlerPWA/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-poi",
+  "name": "smart-sammler-pwa",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,55 +7,51 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "browser": "ng serve --host 0.0.0.0"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^7.0.1",
-    "@angular/cdk": "^7.0.2",
-    "@angular/common": "^7.0.1",
-    "@angular/compiler": "^7.0.1",
-    "@angular/core": "^7.0.1",
-    "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "^7.0.1",
-    "@angular/http": "^7.0.1",
-    "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "^7.0.1",
-    "@angular/platform-browser-dynamic": "^7.0.1",
-    "@angular/pwa": "^0.10.3",
-    "@angular/router": "^7.0.1",
-    "@angular/service-worker": "^7.0.1",
-    "agm-direction": "^0.5.4",
-    "core-js": "^2.5.4",
+    "@agm/core": "^1.0.0-beta.6",
+    "@angular/animations": "~8.0.0",
+    "@angular/cdk": "~8.0.1",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
+    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/forms": "~8.0.0",
+    "@angular/material": "^8.0.1",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/pwa": "^0.800.2",
+    "@angular/router": "~8.0.0",
+    "@angular/service-worker": "~8.0.0",
+    "agm-direction": "^0.7.8",
     "hammerjs": "^2.0.8",
-    "linqts": "^1.11.0",
+    "linqts": "^1.12.2",
     "rx-dom": "^7.0.3",
-    "rxjs": "^6.0.0",
-    "web-push": "^3.3.1",
-    "zone.js": "^0.8.26"
+    "rxjs": "~6.4.0",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.3",
-    "@angular-devkit/core": "^0.6.8",
-    "@angular/cli": "~7.0.3",
-    "@angular/compiler-cli": "^7.0.1",
-    "@angular/language-service": "^7.0.1",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.2",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/language-service": "~8.0.0",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~3.1.4"
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   }
 }
