--- a/06 Ionic/04 Device Access/DeviceAccessCapacitor/android/app/src/main/assets/capacitor.config.json
+++ b/06 Ionic/04 Device Access/DeviceAccessCapacitor/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "at.integrations.camera",
-  "appName": "cap-camer",
+  "appId": "at.integrations.capdemo",
+  "appName": "capacitor-app",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www"
