--- a/06 Ionic/04 Device Access/DeviceAccessCapacitor/package.json
+++ b/06 Ionic/04 Device Access/DeviceAccessCapacitor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capCamera",
+  "name": "capacitor-app",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -28,7 +28,10 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "cordova-support-google-services": "^1.3.1",
     "core-js": "^2.5.4",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "^2.2.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
