--- a/04 Device Access/Cordova/smartSammlerCordova/package.json
+++ b/04 Device Access/Cordova/smartSammlerCordova/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "~8.0.0",
     "agm-direction": "^0.7.8",
+    "angular-cordova": "^1.0.0",
     "cordova-android": "^8.0.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-camera": "^4.0.3",
@@ -38,6 +39,7 @@
     "org.apache.cordova.geolocation": "^0.3.6",
     "rx-dom": "^7.0.3",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
