--- a/04 Device Access/Cordova/smartSammlerCordova/tsconfig.json
+++ b/04 Device Access/Cordova/smartSammlerCordova/tsconfig.json
@@ -11,12 +11,9 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ]
-  }
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "es2018", "dom"]
+  },
+  "exclude": [],
+  "include": ["src/**/*", "./node_modules/angular-cordova/**/*"]
 }
