--- a/06 Ionic/06 Security/SecurityFirebase/package.json
+++ b/06 Ionic/06 Security/SecurityFirebase/package.json
@@ -18,6 +18,7 @@
     "@angular/fire": "^5.2.1",
     "@angular/forms": "^7.2.2",
     "@angular/http": "^7.2.2",
+    "firebase": "^5.4.2",
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
