--- a/08 State/VoucherServiceNGRX/VouchersAPI/appsettings.json
+++ b/08 State/VoucherServiceNGRX/VouchersAPI/appsettings.json
@@ -1,8 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "LocalDBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=VoucherCodeFirstDB-Identity;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;",
-    "SQLServerDBConnection": "Data Source=localhost;Initial Catalog=VoucherCodeFirstDB-Identity;Persist Security Info=True;User ID=angular;Password=angular",
-    "SQLiteDBConnection": "Data Source=vouchers.db"
+    "SQLServerDBConnection": "Data Source=localhost;Initial Catalog=VoucherCodeFirstDB-Identity;Persist Security Info=True;User ID=angular;Password=angular"
   },
   "ApplicationName": "Voucher Editor",
   "Authentication": {
